--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ commit example data file (jake)
 check on quote escaping in -mapper and -reducer (jake)
 check on using field other than first for key (jake)
 hunt down a bash interpreter (paul)
+enumerate switches/options on sort (jake)
